# doppelkopf-rs

./: .gitignore  Cargo.toml  Makefile  README.md  TODO.md
.github/workflows/: ci-cd.yml
.installing_utils/: build.sh  check_dependencies.sh  check_dppkf.sh  check_os_support.sh  fancy_install_text.sh  fancy_uninstall_text.sh  text_utils.sh
crates/deal_cards_lambda/: Cargo.toml
crates/doppelkopf-rs/: Cargo.toml
crates/doppelkopf-rs/src/: dppkf.rs
crates/doppelkopf-rs/src/cli/cli_utils/validations/: mod.rs
crates/doppelkopf-rs/src/lib/: lib.rs
crates/doppelkopf-rs/src/lib/model/operations/: new_game_model.rs
crates/doppelkopf-rs/src/lib/utils/: mod.rs
crates/doppelkopf-rs/src/lib/utils/constants/: trumps.rs
crates/doppelkopf_cards_lib/src/: lib.rs
crates/doppelkopf_cards_lib/src/card/: mod.rs
crates/doppelkopf_cards_lib/src/suits/: mod.rs
crates/doppelkopf_cards_lib/src/utils/: constants.rs
crates/dppkf_cards_lib/: Cargo.toml
crates/dppkf_cards_lib/src/card/: mod.rs
crates/dppkf_cards_lib/src/card_builder/: mod.rs
crates/dppkf_cards_lib/src/deck/: mod.rs
crates/dppkf_cards_lib/src/ranks/: mod.rs
crates/dppkf_cards_lib/src/suits/: mod.rs
crates/dppkf_cli/: Cargo.toml
crates/dppkf_cli/src/: dppkf.rs
crates/dppkf_cli/src/cli/: mod.rs
crates/dppkf_cli/src/cli/cli_commands/: cheat_sheet_cli.rs  new_game_cli.rs
crates/dppkf_cli/src/cli/cli_enums/: mod.rs
crates/dppkf_lambda/: Cargo.toml
crates/dppkf_lib/: Cargo.toml
crates/dppkf_lib/src/model/operations/: new_game_model.rs
crates/dppkf_lib/src/model/types/: cheat_sheet.rs  game_state.rs
crates/dppkf_lib/src/utils/constants/: cheat_sheet_strings.rs
crates/get_new_game_id_lambda/: Cargo.toml
crates/join_new_game_lambda/: Cargo.toml
crates/make_announcement_lambda/: Cargo.toml
crates/play_trick_lambda/: Cargo.toml
deal_cards/: Cargo.toml
deal_cards_lambda/: Cargo.toml
docs/: DoppelkopfDiagrams.drawio  TODO.md
doppelkopf-rs/: Cargo.toml
doppelkopf-rs/src/: dppkf.rs  main.rs
doppelkopf-rs/src/cli/: mod.rs
doppelkopf-rs/src/cli/cli_commands/: cheat_sheet_cli.rs  join_game_cli.rs  mod.rs  new_game_cli.rs
doppelkopf-rs/src/cli/cli_utils/: mod.rs
doppelkopf-rs/src/cli/cli_utils/constants/: mod.rs  new_game_cli_constants.rs
doppelkopf-rs/src/commands/: cheat_sheet.rs  cheat_sheet_cli.rs  join_game.rs  mod.rs  new_game.rs  new_game_cli.rs  play.rs
doppelkopf-rs/src/lib/: lib.rs
doppelkopf-rs/src/lib/core_logic/: cheat_sheet_logic.rs  game_state_machine.rs  mod.rs  new_game_logic.rs  playing_round_state_machine.rs
doppelkopf-rs/src/lib/model/: game_state.rs  mod.rs
doppelkopf-rs/src/lib/model/operations/: cheat_sheet_model.rs  mod.rs  new_game_model.rs
doppelkopf-rs/src/lib/model/types/: cheat_sheet.rs  game_state.rs  mod.rs  player.rs
doppelkopf-rs/src/lib/utils/constants/: cheat_sheet_strings.rs  cli_commands.rs  follow_suit.rs  mod.rs
doppelkopf-rs/src/lib/utils/text_style/: mod.rs
doppelkopf-rs/src/utils/: mod.rs
doppelkopf-rs/src/utils/cli_text_style/: mod.rs
doppelkopf-rs/src/utils/constants/: cheat_sheet_strings.rs  cli_commands.rs
doppelkopf_cards_lib/: Cargo.toml
doppelkopf_cards_lib/src/: lib.rs
doppelkopf_cards_lib/src/card/: mod.rs
doppelkopf_cards_lib/src/card_builder/: mod.rs
doppelkopf_cards_lib/src/card_color/: mod.rs
doppelkopf_cards_lib/src/deck/: mod.rs
doppelkopf_cards_lib/src/decks/: mod.rs
doppelkopf_cards_lib/src/ranks/: mod.rs
doppelkopf_cards_lib/src/suits/: mod.rs
doppelkopf_cards_lib/src/utils/: constants.rs
game-cards/: Cargo.toml
game-cards/src/: lib.rs
game-cards/src/lib/card/: card.rs
get_new_game_id/: Cargo.toml
join_new_game/: Cargo.toml
make_announcement/: Cargo.toml
make_announcement_lambda/: Cargo.toml
play_trick/: Cargo.toml
src/: main.rs
src/lib/: card.rs  lib.rs
