[workspace]
members = [
  # CLI game
  "crates/doppelkopf-rs",
  # Lib
  # Lambda operations
  "crates/get_new_game_id_lambda",
  "crates/join_new_game_lambda",
  "crates/deal_cards_lambda",
  "crates/make_announcement_lambda",
  "crates/play_trick_lambda",
  # Universal Libraries
  "crates/doppelkopf_cards_lib"
]
resolver = "2"
