[workspace]
members = [
  # Libs
  "crates/dppkf_lib",
  "crates/dppkf_cards_lib",

  # Lambda operations
  "crates/dppkf_lambda",

  # CLI game
  "crates/dppkf_cli",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["Russell Batista <russbatisbarrrco@gmail.com>"]
edition = "2021"
# documentation = "TBD"
license = "MIT"
keywords = ["doppelkopf", "cards_game"]
categories = ["game"]
homepage = "https://rbatistab.com/"
repository = "https://github.com/Rbatistab/doppelkopf-rs"

[workspace.dependencies]
dppkf_lib = { version = "0.1.0", path = "crates/dppkf_lib" }
dppkf_cards_lib = { version = "0.1.0", path = "crates/dppkf_cards_lib" }