[package]
name = "join_new_game"
version = "0.1.0"
edition = "2021"
authors = ["Russell Batista <russbatisbarrrco@gmail.com>"]
description = "Lambda operation that creates a new game state and stores it"
license = "MIT"
homepage = "https://rbatistab.com/"
# documentation = "TBD"
repository = "https://github.com/Rbatistab/doppelkopf-rs"

[[bin]]
name="join_new_game_handler"
path="src/join_new_game_handler.rs"

[dependencies]
