[package]
name = "deal_cards_lambda"
description = "Lambda operation that updates game state to represent a card dealing"
# documentation = "TBD"

version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
homepage.workspace = true
repository.workspace = true

[[bin]]
name="deal_cards_lambda_handler"
path= "src/deal_cards_lambda_handler.rs"

[dependencies]
