[package]
name = "dppkf_cards_lib"
description = "Provides resources related to doppelkopf cards"
# documentation = "TBD"

version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
homepage.workspace = true
repository.workspace = true

[lib]
name = "dppkf_cards_lib"
path = "src/lib.rs"

[dependencies]
const_format = "0.2.34"
clap = { version = "4.5.23" }
regex = "1.11.1"
