[package]
name = "dppkf_lambda"
description = "Lambda operation that updates game state to represent a card dealing"
# documentation = "TBD"

version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
homepage.workspace = true
repository.workspace = true

[[bin]]
name="get_new_game_lambda_handler"
path= "src/get_new_game_lambda_handler.rs"

[[bin]]
name="join_new_game_lambda_handler"
path= "src/join_new_game_lambda_handler.rs"

[[bin]]
name="deal_cards_lambda_handler"
path= "src/deal_cards_lambda_handler.rs"

[[bin]]
name="make_announcement_lambda_handler"
path= "src/make_announcement_lambda_handler.rs"

[[bin]]
name="play_trick_lambda_handler"
path= "src/play_trick_lambda_handler.rs"

[dependencies]
