[package]
name = "dppkf_lib"
description = "Provides the resources to implement a dopplekopf game."
# documentation = "TBD"

version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
homepage.workspace = true
repository.workspace = true

[lib]
name = "dppkf_lib"
path = "src/lib.rs"

[dependencies]
# Workspace dependencies
dppkf_cards_lib.workspace = true

# External dependencies
clap = { version = "4.5.23", features = ["derive"] }
const_format = "0.2.34"
log = "0.4.22"
uuid = { version = "1.11.0", features = ["v4"] }

