[package]
name = "join_new_game_lambda"
description = "Lambda operation that creates a new game state and stores it"
# documentation = "TBD"

version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
homepage.workspace = true
repository.workspace = true

[[bin]]
name="join_new_game_lambda_handler"
path= "src/join_new_game_lambda_handler.rs"

[dependencies]
