[package]
name = "make_announcement_lambda"
description = "Lambda operation that updates the game state to represent that a user made an announcement"
# documentation = "TBD"

version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
homepage.workspace = true
repository.workspace = true

[[bin]]
name="make_announcement_lambda_hanlder"
path= "src/make_announcement_lambda_hander.rs"

[dependencies]
