[package]
name = "play_trick_lambda"
description = "Lambda operation that updates game state to represent that user played a card (trick)"
# documentation = "TBD"

version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
homepage.workspace = true
repository.workspace = true

[[bin]]
name="play_trick_lambda_handler"
path= "src/play_trick_lambda_handler.rs"

[dependencies]
